--- a/YELP-STAGE-ONE/src/app/all-petstores/petstore-create/petstore-create.component.html
+++ b/YELP-STAGE-ONE/src/app/all-petstores/petstore-create/petstore-create.component.html
@@ -1,1 +1,6 @@
-<p>petstore-create works!</p>
+<div class="container">
+    <label>Name:</label>
+    <input type="text" [(ngModel)]="enteredValue">
+    <hr>
+    <button type="button" class="btn btn-primary" (click)="onAddStore()"> Save Store</button>
+</div>
