--- a/YELP-STAGE-ONE/src/app/header/header.component.html
+++ b/YELP-STAGE-ONE/src/app/header/header.component.html
@@ -1,1 +1,27 @@
-<p>header works!</p>
+<nav>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+     <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">
+                    <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
+                  </button>
+                  <a routerLink="/" class="navbar-brand">PetLovers.in</a>
+                </div>
+                <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">PetStores</a></li>
+                        <li><a href="#">KENNELS</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">SIGNUP</a></li>
+                        <li><a href="#">LOGIN</a></li>
+                    </ul>
+ 
+                </div>
+            </div>
+        </div>
+    </nav>
+</nav>
